# Dental_Imaging_SW_System

./: .gitignore  HTML.txt  MEETING.md  Meeting.md  README.md  kim test.txt  test.md  ~$젝트 계획서.docx  프로젝트 계획서.docx
Project/src/CBCTSimulationSW/: .gitattributes  Adding  CMakeLists.txt
Project/src/CBCTSimulationSW/Modeling/: lowerbody.mtl  obj.mtl  upperbody.mtl
Project/src/CBCTSimulationSW/RawImages/Ceph_Frame(48x2400)/: 0003.raw  0004.raw  0007.raw  0009.raw  0011.raw  0013.raw  0015.raw  0016.raw  0019.raw  0022.raw  0024.raw  0026.raw  0038.raw  0039.raw  0041.raw  0046.raw  0047.raw  0049.raw  0050.raw  0054.raw  0060.raw  0061.raw  0064.raw  0070.raw  0072.raw  0077.raw  0080.raw  0086.raw  0089.raw  0091.raw  0094.raw  0098.raw  0099.raw  0102.raw  0104.raw  0107.raw  0113.raw  0120.raw  0121.raw  0123.raw  (+385 more)
Project/src/CBCTSimulationSW/RawImages/Pano_Frame(1152x64)/: 0002.raw  0005.raw  0006.raw  0007.raw  0008.raw  0012.raw  0018.raw  0020.raw  0024.raw  0029.raw  0032.raw  0038.raw  0039.raw  0041.raw  0052.raw  0053.raw  0054.raw  0056.raw  0060.raw  0062.raw  0064.raw  0065.raw  0071.raw  0083.raw  0085.raw  0088.raw  0104.raw  0105.raw  0107.raw  0113.raw  0122.raw  0128.raw  0129.raw  0136.raw  0137.raw  0139.raw  0140.raw  0143.raw  0157.raw  0168.raw  (+447 more)
Project/src/CBCTSimulationSW/Ui/ImageViewerSW/: mainwindow.ui
Project/src/CBCTSimulationSW/Ui/PatientManageSW/: icons.qrc  mainwindow.ui
Project/src/CBCTSimulationSW/forms/: mainwindow.ui  mainwindow.ui.autosave
Project/src/CBCTSimulationSW/include/: cbctfiletransfer.h  cbctlogthread.h  cbctmodelcontroller.h  cbctrawimageviewer.h  controlpanel.cpp  controlpanel.h  fileprotocol.h  mainwindow.h  packetdata.h  protocol.h
Project/src/CBCTSimulationSW/resources/: resources.qrc
Project/src/CBCTSimulationSW/resources/Ceph_Frame(48x2400)/: 0000.raw  0001.raw  0004.raw  0005.raw  0006.raw  0008.raw  0010.raw  0011.raw  0012.raw  0014.raw  0018.raw  0019.raw  0020.raw  0021.raw  0023.raw  0024.raw  0025.raw  0027.raw  0028.raw  0029.raw  0030.raw  0031.raw  0032.raw  0034.raw  0035.raw  0037.raw  0038.raw  0040.raw  0041.raw  0042.raw  0043.raw  0044.raw  0045.raw  0046.raw  0048.raw  0049.raw  0051.raw  0053.raw  0055.raw  0056.raw  (+784 more)
Project/src/CBCTSimulationSW/resources/Pano_Frame(1152x64)/: 0001.raw  0003.raw  0004.raw  0009.raw  0010.raw  0023.raw  0026.raw  0027.raw  0028.raw  0030.raw  0034.raw  0037.raw  0042.raw  0043.raw  0047.raw  0048.raw  0049.raw  0050.raw  0055.raw  0058.raw  0059.raw  0061.raw  0063.raw  0066.raw  0070.raw  0073.raw  0075.raw  0078.raw  0080.raw  0082.raw  0087.raw  0090.raw  (+465 more)
Project/src/CBCTSimulationSW/src/: cbctfiletransfer.cpp  cbctmodelcontroller.cpp  cbctrawimageviewer.cpp  main.cpp  mainwindow.cpp  packetdata.cpp  protocol.cpp
Project/src/ct/hello/: CMakeLists.txt  CMakeLists.txt.user.e41e8d0  hello.cpp
(+1195 files in other folders)
